--- a/base-redis/pom.xml
+++ b/base-redis/pom.xml
@@ -12,5 +12,16 @@
     <groupId>jurlon.cjeditor</groupId>
     <artifactId>base-redis</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>jurlon.cjeditor</groupId>
+            <artifactId>base-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
