配置文件重新整理、整合redis

--- a/cjeditor-web/pom.xml
+++ b/cjeditor-web/pom.xml
@@ -29,9 +29,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--这里写上main方法所在类的路径-->
                 <configuration>
-                    <mainClass>jurlon.cjeditor.CjeditorApplication</mainClass>
+                    <classifier>exec</classifier>
                 </configuration>
                 <executions>
                     <execution>
