--- a/base-service/pom.xml
+++ b/base-service/pom.xml
@@ -18,7 +18,11 @@
             <artifactId>base-mybatis</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>jurlon.cjeditor</groupId>
+            <artifactId>base-redis</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
