--- a/base-redis/pom.xml
+++ b/base-redis/pom.xml
@@ -22,12 +22,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <dependency>
+        
+        <!--redis用jackson方式会有类型转换问题 
+        用默认的序列化方式其一文件大占内存
+        其二不能用keys()获取到key-->
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.2</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency>-->
+        
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -35,7 +40,6 @@
         <dependency>
             <groupId>com.esotericsoftware.kryo</groupId>
             <artifactId>kryo</artifactId>
-            <version>2.24.0</version>
         </dependency>
 
     </dependencies>
